--- a/index.html
+++ b/index.html
@@ -387,9 +387,11 @@
     </div>
   </div>
   <footer>
-    <div class="footeratas">  
-      <a href="https://www.instagram.com/cokvrindaaa88/"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://www.tiktok.com/@cokvrindaa"><i class="fa-brands fa-tiktok"></i></a>
+    <div class="footeratas" id="footeratas">  
+      <a href="https://www.instagram.com/cokvrindaaa88/" id="logoig" class="logoig"><i class="fa-brands fa-instagram" ></i></a>
+      <a href="https://www.tiktok.com/@cokvrindaa"><i class="fa-brands fa-tiktok" id="logotiktok"></i></a>
+      <a href="https://www.youtube.com/@ohtheneptune"><i class="fa-brands fa-youtube" id="logoyt"></i></a>
+      <a href="https://github.com/cokvrindaa"><i class="fa-brands fa-github" id="logogithub"></i></a>
     </div>
     <p>By Cok Vrinda 2024</p>
   </footer>
